--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <button>Johnson's Baby Oil</button>
   </a>
   <a href="game1.html"><button>Wanna play a game?</button></a>
+    <a href="game2.html"><button>Wanna play another game?</button></a>
     <script>
     const password = prompt("Enter the password to access Diddy Search:");
     if (password !== "diddy123") {
