--- a/game1.html
+++ b/game1.html
@@ -60,7 +60,7 @@
     <div id="scoreboard">Score: 0</div>
     <div id="lives">Lives: 3</div>
     <div id="leaderboard"><strong>Leaderboard</strong><br/></div>
-    <center><a href="diddy search.html"><button>BACK</button></a></center>
+    <center><a href="index.html"><button>BACK</button></a></center>
     <img id="diddy" src="diddy.avif" alt="Diddy" />
   </div>
 
