--- a/index.html
+++ b/index.html
@@ -40,13 +40,24 @@
   </a>
   <a href="game1.html"><button>Wanna play a game?</button></a>
     <a href="game2.html"><button>Wanna play another game?</button></a>
-    <script>
-    const password = prompt("Enter the password to access Diddy Search:");
-    if (password !== "diddy123") {
-      alert("Access Denied!");
-      window.location.href = "https://www.google.com"; // Redirect or block
-    }
-  </script>
+<script>
+  const password = prompt("Enter the password to access Diddy Search:");
+
+  if (password === "diddy123") {
+    // Normal access
+    console.log("Welcome, regular user.");
+  } else if (password === "1612") {
+    // Hack access
+    console.log("Welcome, hacker mode enabled!");
+    // Enable hacks – you can trigger special features here
+    document.body.style.border = "5px solid red"; // Visual hack indicator
+    // Example: auto-fill search box or show secret message
+    window.hacksEnabled = true;
+  } else {
+    alert("Access Denied!");
+    window.location.href = "https://www.google.com"; // Redirect or block
+  }
+</script>
 <meta charset="UTF-8">
 </body>
 </html>
