--- a/game3.html
+++ b/game3.html
@@ -26,7 +26,7 @@
       left: 50px;
       width: 80px;
       height: 80px;
-      background: url('diddy1.png') no-repeat center;
+      background: url('diddy.avif') no-repeat center;
       background-size: contain;
     }
     .obstacle {
