--- a/game3.html
+++ b/game3.html
@@ -28,6 +28,7 @@
       height: 80px;
       background: url('diddy1.png') no-repeat center;
       background-size: contain;
+
     }
     .obstacle {
       position: absolute;
@@ -48,7 +49,7 @@
 </head>
 <body>
   <div id="game">
-    <div id="diddy"></div>
+    <div id="diddy1"></div>
     <div id="score">Score: 0</div>
 	<center><a href="index.html"><button>BACK</button></a></center>
   </div>
@@ -74,12 +75,12 @@
                 isJumping = false;
               } else {
                 position -= 5;
-                diddy1.style.bottom = position + 'px';
+                diddy.style.bottom = position + 'px';
               }
             }, 20);
           } else {
             position += 5;
-            diddy1.style.bottom = position + 'px';
+            diddy.style.bottom = position + 'px';
           }
         }, 20);
       }
@@ -102,7 +103,7 @@
         } else if (
           obstacleLeft < 130 &&
           obstacleLeft > 50 &&
-          parseInt(diddy1.style.bottom) < 50
+          parseInt(diddy.style.bottom) < 50
         ) {
           clearInterval(moveInterval);
           alert('💥 Game Over! Final Score: ' + score);
