--- a/game3.html
+++ b/game3.html
@@ -26,7 +26,7 @@
       left: 50px;
       width: 80px;
       height: 80px;
-      background: url('diddy1.png') no-repeat center;
+      background: url('diddy.png') no-repeat center;
       background-size: contain;
 
     }
@@ -49,7 +49,7 @@
 </head>
 <body>
   <div id="game">
-    <div id="diddy1"></div>
+    <div id="diddy"></div>
     <div id="score">Score: 0</div>
 	<center><a href="index.html"><button>BACK</button></a></center>
   </div>
