--- a/game3.html
+++ b/game3.html
@@ -26,9 +26,8 @@
       left: 50px;
       width: 80px;
       height: 80px;
-      background: url('diddy.png') no-repeat center;
+      background: url('diddy1.png') no-repeat center;
       background-size: contain;
-
     }
     .obstacle {
       position: absolute;
@@ -51,7 +50,7 @@
   <div id="game">
     <div id="diddy"></div>
     <div id="score">Score: 0</div>
-	<center><a href="index.html"><button>BACK</button></a></center>
+	  <center><a href="index.html"><button>BACK</button></a></center>
   </div>
 
   <script>
