--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
     <a href="game2.html"><button>Wanna play another game?</button></a>
   <a href="game3.html"><button>Wanna play another game?</button></a>
 <script>
-  const password = prompt("Enter the password to access Diddy Search:");
-  if (password === "diddy123")
-  } else {
+  const password = prompt("Enter the password to play index:");
+  const allowedPasswords = ["diddy123"];
+
+  if (!allowedPasswords.includes(password)) {
     alert("Access Denied!");
-    window.location.href = "https://www.google.com";
+    window.location.href = "https://eddie855.github.io/diddy-website/index.html; // or your desired redirect"
   }
 </script>
 <meta charset="UTF-8">
