--- a/game4.html
+++ b/game4.html
@@ -38,7 +38,7 @@
 <center><a href="index.html"><button>BACK</button></a></center>
   <h1>🛢 Diddy Oil Tycoon Simulator</h1>
   <p>Click Diddy to earn Oil Coins!</p>
-  <img id="diddy" src="diddys face.avif" alt="Diddy" />
+  <img id="diddy" src="diddy.avif" alt="Diddy" />
 
   <div id="coins">Oil Coins: 0</div>
 
