--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <a href="game2.html"><button>Wanna play another game?</button></a>
   <a href="game3.html"><button>Wanna play another game?</button></a>
   <a href="game4.html"><button>Wanna play another game?</button></a>
+    <a href="drake.html"><button>Wanna play another game?</button></a>
 <script>
   const password = prompt("Enter the password to access Diddy Search:");
   if (password === "diddy123")
