--- a/drake.html
+++ b/drake.html
@@ -31,7 +31,7 @@
     let food = getRandomFood();
 
     const diddyImg = new Image();
-    diddyImg.src = "diddys face.avif"; // Must be in the same folder
+    diddyImg.src = "diddy.avif"; // Must be in the same folder
 
     document.addEventListener("keydown", e => {
       const dirs = {
