Update post ur own.html

--- a/post ur own.html
+++ b/post ur own.html
@@ -5,6 +5,7 @@
   <title>Upload & Play Your Game</title>
   <style>
     body {
+      <center><a href="index.html"><button>BACK</button></a></center>
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 20px;
