--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <a href="game3.html"><button>Wanna play another game?</button></a>
   <a href="game4.html"><button>Wanna play another game?</button></a>
     <a href="drake.html"><button>Wanna play another game?</button></a>
+    <a href="post ur own.html"><button>Wanna play your own game?</button></a>
 <script>
   const password = prompt("Enter the password to access Diddy Search:");
   if (password === "diddy123")
