--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="drake.html"><button>Wanna play another game?</button></a>
     <a href="post ur own.html"><button>Wanna play your own game?</button></a>
 <script>
-  const password = prompt("Enter the password to access Diddy Search:");
+  const password = prompt("Enter the password to access index.html:");
   if (password === "diddy123")
   } else {
     alert("Access Denied!");
