--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <a href="game3.html"><button>Wanna play another game?</button></a>
   <a href="game4.html"><button>Wanna play another game?</button></a>
   <a href="drake.html"><button>Wanna play another game?</button></a>
+ <a href=" Diddy Memory Game.html"><button>Wanna play another game?</button></a>
   <a href="post ur own.html"><button>Wanna play your own game?</button></a>
 </body>
 </html>
