--- a/memory.html
+++ b/memory.html
@@ -51,10 +51,10 @@
 
   <script>
     const images = [
-      'diddys face.avif', 'diddys face.avif',
-      'diddys face.avif', 'diddys face.avif',
-      'diddys face.avif', 'diddys face.avif',
-      'diddys face.avif', 'diddys face.avif'
+      'diddy.avif', 'oil2.jpg',
+      'diddy.avif', 'oil2.jpg',
+      'diddy.avif', 'oil2.jpg',
+      'diddy.avif', 'oil2.jpg',
     ];
 
     let cards = [...images];
