--- a/memory.html
+++ b/memory.html
@@ -83,8 +83,8 @@
           secondCard = card;
           lockBoard = true;
 
-          const firstImg = firstCard.querySelector('img').src;
-          const secondImg = secondCard.querySelector('img').src;
+          const firstImg = firstCard.querySelector('img').src="diddys face.avif";
+          const secondImg = secondCard.querySelector('img').src="oil2.jpg";
 
           if (firstImg === secondImg) {
             firstCard = null;
