--- a/game4.html
+++ b/game4.html
@@ -37,9 +37,9 @@
       position: absolute;
       width: 30px;
       height: 30px;
-      background-color: black;
+      background-color: white;
       border-radius: 50%;
-      animation: squirtUp 0.6s ease-out forwards;
+      animation: squirtdown 0.6s ease-out backwards;
       pointer-events: none;
     }
     @keyframes squirtUp {
