--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </style>
   <script>
     const password = prompt("Enter the password to access Diddy Search:");
-    if (password === "diddy123") {
+    if (password === "normal") {
       document.addEventListener("DOMContentLoaded", () => {
         document.body.style.display = "block";
       });
