--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   <a href="game4.html"><button>Wanna play another game?</button></a>
   <a href="drake.html"><button>Wanna play another game?</button></a>
  <a href="memory.html"><button>Wanna play another game?</button></a>
+   <a href="link.html"><button>Wanna watch a video?</button></a>
   <a href="post ur own.html"><button>Wanna play your own game?</button></a>
 </body>
 </html>
