--- a/index.html
+++ b/index.html
@@ -53,87 +53,18 @@
 
   <a href="https://www.amazon.com.au/Johnsons-Baby-1960258501-Oil-200mL/dp/B077P8VHJS" target="_blank">
     <button>Johnson's Baby Oil</button>
-  </a>
-  <a href="mouth.html"><button>Whats inside diddys mouth?</button></a>
-  <a href="game1.html"><button>Wanna play a game?</button></a>
-  <a href="game2.html"><button>Wanna play another game?</button></a>
-  <a href="game3.html"><button>Wanna play another game?</button></a>
-  <a href="game4.html"><button>Wanna play another game?</button></a>
-  <a href="drake.html"><button>Wanna play another game?</button></a>
- <a href="memory.html"><button>Wanna play another game?</button></a>
-   <a href="link.html"><button>Wanna watch a video?</button></a>
-  <a href="post ur own.html"><button>Wanna play your own game?</button></a>
+</a>
+<a href="mouth.html"><button>Whats inside diddys mouth?</button></a>
+<a href="game1.html"><button>Wanna play a game?</button></a>
+<a href="game2.html"><button>Wanna play another game?</button></a>
+<a href="game3.html"><button>Wanna play another game?</button></a>
+<a href="game4.html"><button>Wanna play another game?</button></a>
+<a href="drake.html"><button>Wanna play another game?</button></a>
+<a href="memory.html"><button>Wanna play another game?</button></a>
+<a href="link.html"><button>Wanna watch a video?</button></a>
+<a href="post ur own.html"><button>Wanna play your own game?</button></a>
+<a href="https://www.youtube.com/watch?v=AlqlKvA-qYo" target="_blank">
+  Watch the Video on YouTube
+</a>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Play Diddy Song</title>
-  <style>
-    body, html {
-      height: 100%;
-      margin: 0;
-      background-color: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    #playButton {
-      background-color: red;
-      color: white;
-      border: none;
-      padding: 40px 80px;
-      font-size: 2rem;
-      border-radius: 10px;
-      cursor: pointer;
-      box-shadow: 0 0 20px #ff0000;
-    }
-    #playButton:hover {
-      background-color: darkred;
-    }
-  </style>
-
-  <button id="playButton">Play Diddy Song</button>
-
-  <audio id="oilSound">
-    <source src="oil-sound.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-
-  <script>
-    const button = document.getElementById('playButton');
-    const oilSound = document.getElementById('oilSound');
-
-    button.addEventListener('click', () => {
-      oilSound.play();
-      setTimeout(() => {
-        window.location.href = 'https://www.youtube.com/watch?v=AlqlKvA-qYo';
-      }, 500); // slight delay to let the sound start playing
-    });
-  </script>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Play Diddy Song</title>
-  <style>
-    body, html {
-      height: 100%;
-      margin: 0;
-      background-color: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    #playButton {
-      background-color: red;
-      color: white;
-      border: none;
-      padding: 40px 80px;
-      font-size: 2rem;
-      border-radius: 10px;
-      cursor: pointer;
-      box-shadow: 0 0 20px #ff0000;
-    }
-    #playButton:hover {
-      background-color: darkred;
-    }
-  </style>
