--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
 <a href="memory.html"><button>Wanna play another game?</button></a>
 <a href="link.html"><button>Wanna watch a video?</button></a>
 <a href="post ur own.html"><button>Wanna play your own game?</button></a>
-<a href="https://www.youtube.com/watch?v=AlqlKvA-qYo" target="_blank">
-  Watch the Video on YouTube
-</a>
+<a href="https://www.youtube.com/watch?v=AlqlKvA-qYo" target="_blank"><button>Watch the Video on YouTube</button></a>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
