--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="diddys face.avif" type="image/avif">
   <meta charset="UTF-8">
   <title>Diddy Search Engine</title>
   <style>
