--- a/word.html
+++ b/word.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>Diddle - Diddy Wordle</title>
   <style>
-    body {
+    body
+    <center><a href="index.html"><button>BACK</button></a></center>
+    {
       font-family: 'Arial', sans-serif;
       background-color: #f0e4d7;
       text-align: center;
