--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <a href="game4.html"><button>Wanna play another game?</button></a>
 <a href="drake.html"><button>Wanna play another game?</button></a>
 <a href="memory.html"><button>Wanna play another game?</button></a>
+<a href="word.html"><button>Wanna play another game?</button></a>
 <a href="post ur own.html"><button>Wanna play your own game?</button></a>
 <a href="https://www.youtube.com/watch?v=AlqlKvA-qYo" target="_blank"><button>Watch the Video on YouTube</button></a>
   <meta charset="UTF-8" />
