--- a/word.html
+++ b/word.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <title>Diddle - Diddy Wordle</title>
   <style>
-    body
-    <center><a href="index.html"><button>BACK</button></a></center>
-    {
+    body {
       font-family: 'Arial', sans-serif;
       background-color: #f0e4d7;
       text-align: center;
@@ -74,7 +72,7 @@
   </style>
 </head>
 <body>
-
+<center><a href="index.html"><button>BACK</button></a></center>
 <h1>🧩 Diddle: Diddy's Wordle</h1>
 <p>Guess the Diddy-related word!</p>
 
